# ocap-report-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  discord_agent.py  docker-compose.yml  docx_converter.py  llm_client.py  loader.py  main.py  pyproject.toml  report.py  report_builder.py  report_generator.py  requirements.txt  scrape_tiles.py  tile_analyzer.py
.claude-plugin/: plugin.json
.claude/skills/generate-aar/: SKILL.md
models/: __init__.py  event.py  position.py  timeframe.py
skills/generate-aar/: SKILL.md
src/aar_pipeline/: __init__.py  cli.py  discord_agent.py  docx_converter.py  llm_client.py  loader.py  map_downloader.py  report_builder.py  report_generator.py  template_config.py
src/aar_pipeline/models/: entity.py  marker.py  mission.py
tests/: conftest.py  test_entity.py  test_event.py  test_loader.py  test_marker.py  test_mission.py  test_position.py  test_timeframe.py
