[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aar-pipeline"
version = "0.1.0"
description = "Generate After Action Reports from OCAP2 Arma 3 mission replays"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31,<3",
    "python-docx>=1.1,<2",
]

[project.optional-dependencies]
dev = ["pytest>=9.0,<10"]

[project.scripts]
aar-pipeline = "aar_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
